<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="70dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="Welcome!"
            android:textAlignment="center"
            android:textSize="50dp"/>

        <EditText
            android:id="@+id/login_username"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/input"
            android:hint="E-mail"
            android:singleLine="true"
            android:paddingLeft="20dp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/input"
            android:hint="Password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:paddingLeft="20dp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_btn"
            android:text="LogIn" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="New User?    "/>

            <TextView
                android:id="@+id/goToRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mint"
                android:text="Register"
                android:textStyle="bold"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/loginPprogressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>